code25_all/lua/29399081.txt
cd /tmp
wget http://luajit.org/download/LuaJIT-2.0.2.tar.gz
tar -zxvf LuaJIT-2.0.2.tar.gz
cd LuaJIT-2.0.2
make install PREFIX=/opt/osrm_infrastructure/LuaJIT-2.0.2

==== Building LuaJIT 2.0.2 ====
make -C src
lj_arch.h:324:2: error: #error "No support for PowerPC 64 bit mode"
 #error "No support for PowerPC 64 bit mode"
 ^

